fix .content-top jumping

--- a/src/index.sass
+++ b/src/index.sass
@@ -190,6 +190,7 @@ body
     justify-content: space-between
     align-items: center
     margin-bottom: 40px
+    height: 47px
   .title
     margin: 0
   .search
